--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Ecommerce</string>
-
-    <string name="hello_world">Hello world!</string>
+    <string name="buy">Buy</string>
+    <string name="share">Share</string>
     <string name="action_settings">Settings</string>
 </resources>
