--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Ecommerce</string>
+    <string name="app_name">PlanetStyle</string>
     <string name="buy">Buy</string>
     <string name="share">Share</string>
     <string name="action_settings">Settings</string>
