--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="buy">Buy</string>
     <string name="share">Share</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_launcher">LauncherActivity</string>
+
+    // for facebook integration
+    <string name="facebook_app_id">677438335731034</string>
 </resources>
