--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="app_description">PlanetStyle helps you discover and buy amazing things all in one place.</string>
 
     <string name="buy">Buy</string>
+    <string name="like">Like</string>
     <string name="share">Share</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_launcher">LauncherActivity</string>
