Brand and Price in Rs
Added Brand
Price now is in Rs. Exchange Rate crawled and stored in DB from macys
Fixed a couple of minor issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     // Launcher page
     <string name="sign_in">Sign In with Email</string>
     <string name="create_account">Create Account</string>
+
+    // Symbols
+    <string name="Rs">\u20B9</string>
 </resources>
