--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="share">Share</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_launcher">LauncherActivity</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 
     // Facebook integration
     <string name="facebook_app_id">677438335731034</string>
